<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".profile.lightdata.ui.LightDataActivity"
    >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerbackgroundcolor">

        <Button
            android:id="@+id/abortButton"
            style="@style/headerButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/navheader_back"
            android:textAllCaps="false"
            android:textSize="18dp" />

        <Button
            android:id="@+id/confirmButton"
            style="@style/headerButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/abortButton"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:enabled="false"
            android:text="@string/navheader_confirm" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/abortButton"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/navheader_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Informazioni personali"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22dp" />

            <ProgressBar
                android:id="@+id/activityIndicator"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/navheader_title"
                android:indeterminateOnly="true"
                android:indeterminateTint="@color/white"
                android:keepScreenOn="true"
                android:visibility="gone" />

        </RelativeLayout>
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="32dp"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:hintEnabled="true"
            android:layout_marginTop="1dp"
            android:theme="@style/TextLabel">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/signup_light_data_name"
                android:padding="5dp"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surnameTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/nameTextLayout"
            app:hintEnabled="true"
            android:layout_marginTop="1dp"
            android:theme="@style/TextLabel">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/signup_light_data_surname"
                android:padding="5dp"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:layout_marginLeft="10dp"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthdayTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/surnameTextLayout"
            app:hintEnabled="true"
            android:layout_marginTop="1dp"
            android:theme="@style/TextLabel">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthdayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/signup_light_data_birthday"
                android:padding="5dp"
                android:inputType="date"
                android:singleLine="true"
                android:layout_marginLeft="10dp"
                android:focusable="false"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nationalityTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/birthdayTextLayout"
            app:hintEnabled="true"
            android:layout_marginTop="1dp"
            android:theme="@style/TextLabel">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nationalityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/signup_light_data_nationality"
                android:padding="5dp"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:focusable="false"
                android:layout_marginLeft="10dp"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

</RelativeLayout>